# bot

bot/: CMakeLists.txt  config.json  main.cpp
bot/include/: binance_client.hpp  ladder_strategy.h
bot/src/: binance_client.cpp  bot.cpp
bot/strategies/: ladder_strategy.cpp
